--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/react": "^11.11.3",
     "@table-library/react-table-library": "^4.1.7",
     "@types/styled-components": "^5.1.34",
+    "bootstrap": "^5.3.2",
     "firebase": "^10.8.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-table": "^7.8.0",
     "styled-components": "^6.1.8"
