--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^6.22.1",
     "react-router-dom": "^6.22.1",
     "react-table": "^7.8.0",
+    "recharts": "^2.15.0",
     "styled-components": "^6.1.8",
     "xlsx": "^0.18.5"
   },
